tests/let-bindings/structural-patterns/ill-typed/test-2-1.stella
language core;

extend with #let-bindings, #let-patterns, #structural-patterns, #tuples;

fn main(n : Nat) -> Nat {
  return
  	let {y, x, z} = {0, true, fn(x : Bool){ return if x then false else true}} in
    if z(y) then x else succ(x)
}
